--- a/dashboard.html
+++ b/dashboard.html
@@ -39,6 +39,9 @@
             <div class="comments-section">
                 <h3>Comentários</h3>
                 <div id="commentsList"></div>
+                <div class="sheet-container">
+    <iframe id="sheets-embed" frameborder="0" scrolling="no"></iframe>
+</div>
             </div>
         </div>
     </div>
