--- a/dashboard.html
+++ b/dashboard.html
@@ -11,10 +11,12 @@
     <div class="dashboard-container">
         <div class="sheets-preview">
             <h2>Planilha de Dados</h2>
+            <div id="google-sheets-container">
             <iframe id="sheetsPreview" frameborder="0"></iframe>
             <div class="sheet-actions">
                 <button id="changeSheet">Alterar Planilha</button>
                 <button id="refreshData">Atualizar Dados</button>
+            </div>
             </div>
         </div>
         
