--- a/dashboard.html
+++ b/dashboard.html
@@ -11,7 +11,8 @@
     <div class="dashboard-container">
         <div class="sheets-preview">
             <h2>Planilha de Dados</h2>
-            <div id="google-sheets-container">
+            <div id="sheet-embed">
+    <p class="loading">Carregando planilha...</p>
             <iframe id="sheetsPreview" frameborder="0"></iframe>
             <div class="sheet-actions">
                 <button id="changeSheet">Alterar Planilha</button>
