--- a/dashboard.html
+++ b/dashboard.html
@@ -5,41 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard NPS</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-    <div class="dashboard-container">
-        <header>
-            <h1>Análise NPS</h1>
-            <button id="back-btn">Voltar</button>
-        </header>
-
-        <section class="sheet-section">
-            <h2>Planilha de Dados</h2>
-            <div id="sheet-container">
-                <div class="loader"></div>
-            </div>
-        </section>
-
-        <section class="charts-section">
-            <div class="chart-container">
-                <h3>Distribuição das Respostas</h3>
-                <canvas id="distributionChart"></canvas>
-            </div>
-            
-            <div class="chart-container">
-                <h3>Evolução Temporal</h3>
-                <canvas id="trendChart"></canvas>
-            </div>
-        </section>
-
-        <section class="comments-section">
-            <h3>Comentários</h3>
-            <div id="comments-container"></div>
-        </section>
+    <h1>Dashboard NPS</h1>
+    <div id="chartContainer">
+        <canvas id="npsChart"></canvas>
     </div>
+    <div id="errorMessage"></div>
 
-    <script src="js/dashboard.js"></script>
+    <!-- Carregar Chart.js e scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="js/sheets-api.js"></script>
     <script src="js/charts.js"></script>
+    <script>
+        // Obter ID da planilha da URL
+        const urlParams = new URLSearchParams(window.location.search);
+        const sheetId = urlParams.get('sheetId');
+        if (sheetId) {
+            processData(sheetId, 'Respostas!A2:C', renderChart);
+        } else {
+            document.getElementById('errorMessage').textContent = 'ID da planilha não informado!';
+            document.getElementById('errorMessage').style.display = 'block';
+        }
+    </script>
 </body>
 </html>
